--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.15",
     "bootstrap": "^5.3.8",
+    "docx": "^9.5.1",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -35,6 +37,7 @@
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.6.0",
