--- a/package.json
+++ b/package.json
@@ -25,19 +25,25 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.15",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "docx": "^9.5.1",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/express": "^4.17.17",
     "@types/file-saver": "^2.0.7",
+    "@types/html2canvas": "^0.5.35",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.6.0",
