feat: Añadir pruebas de usabilidad para el componente ModuloEstadistico. Se implementan métricas de usabilidad y se añaden nuevos scripts de prueba en el archivo de configuración. Se mejora la estructura de las pruebas para evaluar visibilidad, interactividad, rendimiento y accesibilidad del componente.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:usabilidad": "ng test --code-coverage --watch=false",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "test:all": "npm run test:usabilidad && npm run test:e2e",
+    "test:reporte": "node scripts/generar-reporte-usabilidad.js",
     "serve:ssr:Front-end-gestion-curricular": "node dist/front-end-gestion-curricular/server/server.mjs"
   },
   "private": true,
