--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "axe-core": "^4.11.0",
+    "cypress": "^15.5.0",
     "cypress-axe": "^1.7.0",
+    "cypress-plugin-tab": "^1.0.5",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
