feat: agregar favicon.ico a la configuración de assets en angular.json
- Se añadió la configuración para incluir el archivo favicon.ico en la raíz del proyecto, mejorando la presentación visual de la aplicación en navegadores.

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,11 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
+                "glob": "favicon.ico",
+                "input": "src",
+                "output": "/"
+              },
+              {
                 "glob": "**/*",
                 "input": "public"
               },
