--- a/angular.json
+++ b/angular.json
@@ -91,8 +91,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "karmaConfig": "karma.conf.js",
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
+            "include": ["src/**/*.spec.ts"],
             "assets": [
               {
                 "glob": "**/*",
