feat: agregar pruebas de usabilidad y mejoras en accesibilidad
- Se añadió un nuevo script en `package.json` para ejecutar pruebas de usabilidad con Cypress.
- Se realizaron ajustes en las pruebas de E2E para mejorar la accesibilidad, incluyendo la verificación de indicadores de carga y la navegación con teclado.
- Se optimizaron las pruebas de los flujos de login, paz y salvo, y cursos intersemestrales para asegurar que los elementos sean accesibles y visibles.
- Se implementaron mejoras en la estructura de las pruebas de accesibilidad, asegurando que los elementos cumplan con los estándares ARIA y WCAG.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:accesibilidad:e2e:open": "cypress open --e2e --browser chrome",
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open",
+    "test:usabilidad:e2e": "cypress run --spec \"cypress/e2e/usabilidad/**/*.cy.ts\"",
     "test:all": "npm run test:usabilidad && npm run test:e2e",
     "test:seguridad-accesibilidad": "npm run test:seguridad && npm run test:accesibilidad && npm run test:accesibilidad:e2e",
     "test:reporte": "node scripts/generar-reporte-usabilidad.js",
