--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets" 
+              "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -66,7 +66,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
+                  "with": "src/environments/environment.production.ts"
                 }
               ]
             }
